hphp/test/zend/bad/ext/soap/tests/interop/Round4/GroupH/r4_groupH_simple_doclit_005w.php
<?php
$client = new SoapClient(dirname(__FILE__)."/round4_groupH_simple_doclit.wsdl",array("trace"=>1,"exceptions"=>0));
$client->echoMultipleFaults1(array("whichFault" => 2,
                                   "param1" => "Hello world",
                                   "param2" => array(12.345,45,678)));
echo $client->__getlastrequest();
$HTTP_RAW_POST_DATA = $client->__getlastrequest();
include("round4_groupH_simple_doclit.inc");
echo "ok\n";
?>